--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj.filters
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj.filters
@@ -72,7 +72,7 @@
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\utility\data.ipp">
       <Filter>include\bitcoin\impl\utility</Filter>
     </None>
-    <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\utility\format.ipp">
+    <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\utility\endian.ipp">
       <Filter>include\bitcoin\impl\utility</Filter>
     </None>
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\utility\serializer.ipp">
@@ -316,7 +316,7 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\decorator.hpp">
       <Filter>include\bitcoin\utility</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\format.hpp">
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\endian.hpp">
       <Filter>include\bitcoin\utility</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\logger.hpp">
