Add base64 and tests.

--- a/Makefile.am
+++ b/Makefile.am
@@ -74,7 +74,8 @@ bitcoin_bitcoin_formats_includedir = ${includedir}/bitcoin/bitcoin/formats
 bitcoin_bitcoin_formats_include_HEADERS = \
     include/bitcoin/bitcoin/formats/base10.hpp \
     include/bitcoin/bitcoin/formats/base16.hpp \
-    include/bitcoin/bitcoin/formats/base58.hpp
+    include/bitcoin/bitcoin/formats/base58.hpp \
+    include/bitcoin/bitcoin/formats/base64.hpp
 
 bitcoin_bitcoin_impl_formats_includedir = ${includedir}/bitcoin/bitcoin/impl/formats
 bitcoin_bitcoin_impl_formats_include_HEADERS = \
@@ -158,6 +159,7 @@ src_libbitcoin_la_SOURCES = \
     src/formats/base10.cpp \
     src/formats/base16.cpp \
     src/formats/base58.cpp \
+    src/formats/base64.cpp \
     src/math/checksum.cpp \
     src/math/ec_keys.cpp \
     src/math/external/hmac_sha256.c \
@@ -215,6 +217,7 @@ test_libbitcoin_test_SOURCES = \
     test/base10.cpp \
     test/base16.cpp \
     test/base58.cpp \
+    test/base64.cpp \
     test/big_number.cpp \
     test/checksum.cpp \
     test/ec_keys.cpp \
