--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj.filters
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj.filters
@@ -66,7 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\utility\base16.ipp">
+    <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\formats\base16.ipp">
       <Filter>include\bitcoin\impl\formats</Filter>
     </None>
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\serialize\block.ipp">
