--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj.filters
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj.filters
@@ -69,9 +69,6 @@
     <Filter Include="src\config">
       <UniqueIdentifier>{5aca2e32-6005-4543-bee5-6de0cd35f51c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="include\bitcoin\impl\config">
-      <UniqueIdentifier>{56317cd8-44d3-4595-ac65-0267a4cdf890}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -96,8 +93,8 @@
     <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\utility\serializer.ipp">
       <Filter>include\bitcoin\impl\utility</Filter>
     </None>
-    <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\config\config.ipp">
-      <Filter>include\bitcoin\impl\config</Filter>
+    <None Include="..\..\..\..\include\bitcoin\bitcoin\impl\utility\general.ipp">
+      <Filter>include\bitcoin\impl\utility</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -227,8 +224,8 @@
     <ClCompile Include="..\..\..\..\src\config\printer.cpp">
       <Filter>src\config</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\src\config\config.cpp">
-      <Filter>src\config</Filter>
+    <ClCompile Include="..\..\..\..\src\utility\general.cpp">
+      <Filter>src\utility</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -409,8 +406,8 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\printer.hpp">
       <Filter>include\bitcoin\config</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\config\config.hpp">
-      <Filter>include\bitcoin\config</Filter>
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\utility\general.hpp">
+      <Filter>include\bitcoin\utility</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
