--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -78,6 +78,7 @@
     <ClCompile Include="..\..\..\..\src\formats\base16.cpp" />
     <ClCompile Include="..\..\..\..\src\formats\base58.cpp" />
     <ClCompile Include="..\..\..\..\src\formats\base64.cpp" />
+    <ClCompile Include="..\..\..\..\src\formats\base85.cpp" />
     <ClCompile Include="..\..\..\..\src\math\checksum.cpp" />
     <ClCompile Include="..\..\..\..\src\math\ec_keys.cpp" />
     <ClCompile Include="..\..\..\..\src\math\external\hmac_sha256.c" />
@@ -126,6 +127,7 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\formats\base16.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\formats\base58.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\formats\base64.hpp" />
+    <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\formats\base85.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\checksum.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\ec_keys.hpp" />
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\math\external\hmac_sha256.h" />
