Update VS post-build test execution command line.

--- a/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.props
+++ b/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.props
@@ -26,7 +26,7 @@
       <PreprocessorDefinitions Condition="'$(DefaultLinkage)' == 'dynamic'">BOOST_TEST_DYN_LINK;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <PostBuildEvent>
-      <Command>"$(TargetPath)" --run_test=* --random=1 --result_code=no --detect_memory_leak=0 --report_level=no --build_info=yes</Command>
+      <Command>"$(TargetPath)" --run_test=* --random=1 --show_progress=no --result_code=no --detect_memory_leak=0 --report_level=no --build_info=yes</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
 
