Extend binary_type with append/prepend/get_substring/shift_left/shift_right functions.  Note, shift_left reduces, shift_right extends.

--- a/Makefile.am
+++ b/Makefile.am
@@ -231,6 +231,7 @@ test_libbitcoin_test_SOURCES = \
     test/base64.cpp \
     test/base85.cpp \
     test/big_number.cpp \
+    test/binary.cpp \
     test/checksum.cpp \
     test/config.cpp \
     test/ec_keys.cpp \
