Update style guide, remove dead code/text.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 #
 # documentation
 #
-doc_DATA = README.md INSTALL COPYING doc/README.tutorial
+doc_DATA = README INSTALL COPYING
 
 #doc_sphinxdir = ${docdir}/sphinx/
 #doc_sphinx_DATA = \
